CF-648: Fix line height spacing issue for mobile nav

--- a/src/shared/assets/styles/components/_sidebar.scss
+++ b/src/shared/assets/styles/components/_sidebar.scss
@@ -89,11 +89,13 @@
     display: none;
     color: $white;
     opacity: 0.7;
-    padding: 16px 17px;
+    padding: 14px 17px;
+    line-height: 22px;
 
     [class^="icon-"] {
-      font-size: 21px;
+      font-size: 22px;
       position: relative;
+      top: 2px;
       left: -1px;
       margin-right: 0;
     }
